// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It renderes correctly 1`] = `
<a
  className="normal"
  href="satyambnsal.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Author site
</a>
`;

exports[`change the class when hovered 1`] = `
<a
  className="normal"
  href="satyambnsal.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Author site
</a>
`;

exports[`change the class when hovered 2`] = `
<a
  className="hovered"
  href="satyambnsal.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Author site
</a>
`;

exports[`change the class when hovered 3`] = `
<a
  className="normal"
  href="satyambnsal.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Author site
</a>
`;

exports[`renders as an anchor when no page is set 1`] = `
<a
  className="normal"
  href="#"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Author site
</a>
`;
